# datacamp-data-modelling-sql

./: .gitignore  README.md  pyproject.toml
SQL/: create_companies.sql  create_compustat.sql  initial_data_cleanse.sql
data/Sorenson_Workstation_FIVE_Data Folder/ascii/: SorensonworkfirmFIVEdata.csv
data/Sorenson_Workstation_FIVE_Data Folder/excel/: SorensonworkfirmFIVEdata.xls  SorensonworkprodFIVEdata.xls
notebooks/: code_along.ipynb
notebooks/datacamp-workspace/: completed_analysis.ipynb  notebook.ipynb
